# ge-dri-prototype

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/constants/: dri_types.rs  mod.rs  physiological.rs  scaling.rs  special_values.rs  waveforms.rs
src/decode/: mod.rs  physiological.rs  status_bits.rs  subrecords.rs  waveforms.rs
src/device/: mod.rs  port_selector.rs  serial_device.rs
src/protocol/: checksum.rs  framing.rs  header.rs  mod.rs
src/storage/: csv_writer.rs  json_writer.rs  mod.rs  raw_writer.rs
src/ui/: menu.rs  mod.rs
