[package]
name = "ge-dri-prototype"
version = "0.1.0"
edition = "2024"
default-run = "ge-dri-prototype"

[[bin]]
name = "ge-dri-prototype"
path = "src/main.rs"

[dependencies]
# Serial port communication
serialport = "4.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV writing
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UI for port selection
dialoguer = "0.11"

# Logging
log = "0.4"
env_logger = "0.11"

clap = { version = "4", features = ["derive"] }
rand = "0.8"

# Byte manipulation
bytes = "1.5"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
